[project]
name = "medicare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.42.44",
    "config>=0.5.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-aws>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.7",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
